# UniConnect

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  flake.nix  pyproject.toml
app/: main.py
app/core/: config.py  security.py
app/db/: database.py
app/models/: __init__.py  models.py
app/routers/: __init__.py  announcement.py  assignment.py  auth.py  chat.py  event.py  group.py  poll.py  resource.py  schedule.py  user.py
app/schemas/: __init__.py  announcement.py  assignment.py  auth.py  event.py  group.py  message.py  poll.py  resource.py  user.py
app/services/: __init__.py  background_tasks.py  socket_manager.py
client/pages/: admin.html  announcements.html  chat.html  home.html  login.html  no_group.html  polls.html  register.html  resources.html  ressources.html  timetables.html  unauthorized.html
client/scripts/: admin.js  annoucements.js  chat.js  common.js  home.js  login.js  navbar.js  (+6 more)
docs/: nihad's.txt
server/: .env.example  .gitignore  Dockerfile  docker-compose.yml  flake.nix  pyproject.toml
server/app/: main.py
server/app/core/: __init__.py  config.py  security.py
server/app/db/: database.py
server/app/models/: models.py
server/app/routers/: admin.py  assignment.py  auth.py  chat.py  event.py  events.py  group.py  message.py  poll.py  schedule.py  user.py  users.py
server/app/schemas/: __init__.py  assignment.py  assignment_schemas.py  auth.py  event.py  event_schemas.py  group.py  group_schemas.py  poll.py  user.py  user_schemas.py
server/app/services/: __init__.py  geocoding.py
(+13 files in other folders)
