[project]
name = "uniconnect_server"
version = "0.1.0"
description = ""
readme = "../README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt==4.0.1",
    "email-validator>=2.3.0",
    "fastapi>=0.128.6",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
    "websockets>=16.0",
]
